Sửa lại hết chức năng trừ thống kê